Diferent image, new style in blog post.

--- a/prontocloud/index.html
+++ b/prontocloud/index.html
@@ -10,24 +10,24 @@
     <link rel="stylesheet" href="./css/styles.css">
 
     <!-- icones -->
-    <link rel="shortcut icon" href="./images/favicon.cc"> <!-- 17x17 pixels -->
-    <link rel="apple-touch-icon" href="./images/icon-touch-retina.png">
-    <link rel="apple-touch-icon" href="./images/icon-touch-retina-iphone.png">
-    <link rel="apple-touch-icon" href="./images/icon-touch-retina-ipad.png">
+    <link rel="shortcut icon" href="./images/favicon_.ico"> <!-- 17x17 pixels -->
+    <link rel="apple-touch-icon" href="./images/icon-touch-logoretina.png">
+    <link rel="apple-touch-icon" href="./images/icon-touch-logoretina-iphone.png">
+    <link rel="apple-touch-icon" href="./images/icon-touch-logoretina-ipad.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <title>ProntoCloud</title>
+    <title>Birdline</title>
 </head>
 <body>
 
     <div class="main-container">
         <header>
             <div class="container">
-                <img src="./images/prontocloud.png" alt="ProntoCloud">
+                <img src="./images/birdlinelogohead.png" alt="BirdLine">
             </div>
         </header>
         <section>
@@ -41,9 +41,9 @@
                 </nav>
                 <article>
                     <div class="container">
-                        <h1>Planejamento para criação de sites</h1>
+                        <h1>PLANEJAMENTO PARA CRIAÇÃO DE SITES</h1>
 
-                        <img src="./images/web-design-planning-700x300.jpg" alt="Planejamento para criação de sites">
+                        <img src="./images/plannersite.jpg" alt="Planejamento para criação de sites">
 
                         <h2>Guia de criação de sites</h2>
 
@@ -82,9 +82,9 @@
                         <h3>Você pode começar:</h3>
 
                         <ol>
-                            <li>Desenhando a estrutura do seu site na mão ou em qualquer software de produção gráfica de sua preferência.</li>
-                            <li>Escrevendo os textos de todas as páginas e seções do site.</li>
-                            <li>Pesquisar ou produzir fotos ou vídeos enriquecer o conteúdo do site.</li>
+                            <li>Desenhando a estrutura do seu site na mão ou em qualquer software de produção gráfica de sua preferência.</li><br>
+                            <li>Escrevendo os textos de todas as páginas e seções do site.</li><br>
+                            <li>Pesquisar ou produzir fotos ou vídeos enriquecer o conteúdo do site.</li><br>
                         </ol>
 
                         <p>Se quiser pode compartilhar seu resultado com a gente. No próximo post vamos continuar com o nosso guia de criação de sites , falando sobre os aspectos técnicos do desenvolvimento do seu site.</p>
@@ -109,8 +109,8 @@
         </section>
         <footer>
             <div class="container">
-                <p>&copy; ProntoCloud. Todos os direitos reservados.
-            <small>Desenvolvido por: Marcelo Cavalcante</small></p>
+                <p>&copy; BirdLine. Todos os direitos reservados.
+            <small>Desenvolvido por Laís Romero</small></p>
             </div>
         </footer>
     </div>
